# some_works_on_advanced_cpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/common/: calculations.h
src/shapes/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  ShapeManager.h  Triangle.cpp  Triangle.h
